# shnote

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  dist-workspace.toml
.github/workflows/: ci.yml  release.yml  test-install.yml
scripts/: customize_dist_installers.sh  install.ps1  install.sh
src/: cli.rs  config.rs  doctor.rs  executor.rs  i18n.rs  info.rs  init.rs  localize.rs  main.rs  pueue.rs  pueue_embed.rs  shell.rs  test_support.rs  uninstall.rs  update.rs
tests/: cli_tests.rs
