[package]
name = "shnote"
version = "1.0.0"
edition = "2021"
description = "A lightweight command wrapper that enforces WHAT/WHY documentation"
license = "MIT"
repository = "https://github.com/user/shnote"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
which = "8.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.20"
