[package]
name = "shnote"
version = "0.1.5"
edition = "2021"
description = "A lightweight command wrapper that enforces WHAT/WHY documentation"
license = "MIT"
repository = "https://github.com/wangnov/shnote"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.20"
toml = "0.9"
which = "8.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
